unpackaged/main/default/objects/sfsp__SalesNodeExternalAsset__c/sfsp__SalesNodeExternalAsset__c.object-meta.xml
<CustomObject>
    <label>Sales Node External Asset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node External Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>