unpackaged/main/default/objects/sfsp__SalesNodeExternalAsset__c/fields/sfsp__AssetId__c.field-meta.xml
<CustomField>
    <fullName>sfsp__AssetId__c</fullName>
    <externalId>true</externalId>
    <label>Asset Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>