unpackaged/main/default/objects/sfsp__SalesNodeExternalAsset__c/fields/sfsp__AssetType__c.field-meta.xml
<CustomField>
    <fullName>sfsp__AssetType__c</fullName>
    <label>Asset Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>